<resources>
    <string name="app_name">Protego</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">activity_login</string>
    <string name="title_activity_signup">activity_signup</string>
    <string name="splash_activity">activity_splash</string>

    <!-- BUTTON STRINGS -->
    <string name="add_button">Add</string>
    <string name="return_button">Return</string>
    <string name="edit">Edit</string>
    <string name="cancel_connection">Cancel Connection</string>
    <string name="cancel_confirmation">Are you sure you want to cancel this connection?</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="prescribe">Prescribe</string>

    <!-- PROFILE STRINGS -->
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="full_name">Full Name:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="workplace_name">Office:</string>
    <string name="workplace_address">Address:</string>
    <string name="doctor_specialty">Specialty:</string>
    <string name="home_address">Address:</string>
    <string name="edit_first_name">First Name *</string>
    <string name="edit_last_name">Last Name *</string>
    <string name="edit_email">Email *</string>
    <string name="edit_workplace_name">Office *</string>
    <string name="edit_address">Address *</string>
    <string name="edit_specialty">Specialty *</string>
    <string name="general_information">General Information</string>

    <!-- MEDICATION STRINGS -->
    <string name="medication">Medication</string>
    <string name="prescribe_medication">Prescribe Medication</string>
    <string name="med_name_hint">Medication Name</string>
    <string name="med_dosage_hint">Dosage</string>
    <string name="med_frequency_hint">Frequency</string>

    <!-- VITALS STRINGS -->
    <string name="new_vital">New Vital Entry</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="respiratory_rate">Respiratory Rate</string>
    <string name="temperature">Temperature</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="source_doctor">Source Doctor</string>

    <string-array name="type_of_user_array">
        <item>Select Option</item>
        <item>Patient</item>
        <item>Doctor</item>
    </string-array>

    <string-array name="doctor_navbar_options_array">
        <item></item>
        <item>Home</item>
        <item>Profile</item>
        <item>Log out</item>
    </string-array>

    <string-array name="note_visibility_navbar_options_array">
        <item>Add Visibility</item>
        <item>Public</item>
        <item>Private</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_doctor_profile">DoctorProfileActivity</string>
</resources>