<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="450dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".NewNoteFragment">

    <TextView
        android:id="@+id/patientNewVitalTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/new_vital"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/patientNewVitalHeartRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/heart_rate"
        android:inputType="textAutoCorrect"
        android:minHeight="40dp" />


    <EditText
        android:id="@+id/patientNewVitalRespiratoryRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/respiratory_rate"
        android:inputType="text"
        android:minHeight="40dp" />

    <EditText
        android:id="@+id/patientNewVitalTemperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/temperature"
        android:inputType="text"
        android:minHeight="40dp" />

    <EditText
        android:id="@+id/patientNewVitalBloodPressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/blood_pressure"
        android:inputType="text"
        android:minHeight="40dp" />

    <EditText
        android:id="@+id/patientNewVitalSourceDoctor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/source_doctor"
        android:inputType="text"
        android:minHeight="40dp" />
</LinearLayout>