<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="350dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".dashboard.doctor.PrescribeMedicationFragment">

    <TextView
        android:id="@+id/addMedTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/prescribe_medication"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/etMedName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/med_name_hint"
        android:inputType="textAutoCorrect"
        android:minHeight="48dp" />


    <EditText
        android:id="@+id/etMedDosage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/med_dosage_hint"
        android:inputType="text"
        android:minHeight="40dp" />

    <EditText
        android:id="@+id/etMedFrequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/med_frequency_hint"
        android:inputType="text"
        android:minHeight="40dp" />
</LinearLayout>