<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" >

    <Button
        android:id="@+id/doctorProfileEditButton"
        android:layout_width="166dp"
        android:layout_height="42dp"
        app:cornerRadius="20dp"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="72dp" />

    <TextView
        android:id="@+id/DoctorProfileTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textColor="#000000"
        android:textSize="40sp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.474" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/DoctorProfileFirstNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textSize="15sp" />

            <Space
                android:layout_width="30dp"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/tvDoctorProfileFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp" />

        </TableRow>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="25dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/DoctorProfileLastNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textSize="15sp" />

            <Space
                android:layout_width="30dp"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/tvDoctorProfileLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp" />

        </TableRow>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="25dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/DoctorProfileEmailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="15sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/tvDoctorProfileEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp" />
        </TableRow>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="25dp" />


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/DoctorProfileWorkplaceNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workplace_name"
                android:textSize="15sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/tvDoctorProfileWorkplaceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp" />

        </TableRow>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="25dp" />


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/DoctorProfileAddressTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workplace_address"
                android:textSize="15sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/tvDoctorProfileAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp" />
        </TableRow>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="25dp" />


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/DoctorProfileSpecialtyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctor_specialty"
                android:textSize="15sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/tvDoctorProfileSpecialty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp" />

        </TableRow>

    </TableLayout>



    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView20"
        android:name="com.example.protego.DoctorNavigationBarFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.7">

        <Button
            android:id="@+id/DoctorProfileEditButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            app:cornerRadius="20dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="2dp" />

        <Button
            android:id="@+id/DoctorProfileReturnButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/return_button"
            app:cornerRadius="20dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>