<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientEditProfileActivity">


    <TextView
        android:id="@+id/PatientEditProfileTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etPatientEditProfileFirstName"
                    android:layout_width="407dp"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:hint="@string/edit_first_name" />
            </com.google.android.material.textfield.TextInputLayout>


        </TableRow>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etPatientEditProfileLastName"
                    android:layout_width="407dp"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:hint="@string/edit_last_name" />
            </com.google.android.material.textfield.TextInputLayout>


        </TableRow>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etPatientEditProfileEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/edit_email" />
            </com.google.android.material.textfield.TextInputLayout>

        </TableRow>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="25dp" />


<!--        <TableRow-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="match_parent">-->

<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content">-->

<!--                <EditText-->
<!--                    android:id="@+id/etPatientEditProfileAddress"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:singleLine="true"-->
<!--                    android:hint="@string/edit_address" />-->
<!--            </com.google.android.material.textfield.TextInputLayout>-->

<!--        </TableRow>-->

    </TableLayout>



    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView20"
        android:name="com.example.protego.PatientNavigationBarFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.7">

        <Button
            android:id="@+id/PatientEditProfileUpdateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update" />

        <Button
            android:id="@+id/PatientEditProfileReturnButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/return_button" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>